# ShopLink

./: CMakeLists.txt  ShopLink.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: ci.yml
core/: customer.cpp  customer.h  merchant.cpp  merchant.h  product.cpp  product.h  user.cpp  user.h
tests/: tst_shoplink.cpp
